--- a/index.html
+++ b/index.html
@@ -874,18 +874,11 @@
             <div class="integration-container relative">
                 <div class="integration-line"></div>
                 <div class="integration-grid">
-                    <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="HubSpot CRM Integration">
+                    <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="Facebook & Instagram Ads">
                         <div class="integration-icon-container bg-white/10">
-                            <i class="fas fa-cube text-white"></i>
+                            <i class="fas fa-infinity text-white"></i>
                         </div>
-                        <span class="text-base font-medium text-gray-300">HubSpot</span>
-                        <div class="integration-status"></div>
-                    </div>
-                    <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="Salesforce Integration">
-                        <div class="integration-icon-container bg-white/10">
-                            <i class="fas fa-cloud text-white"></i>
-                        </div>
-                        <span class="text-base font-medium text-gray-300">Salesforce</span>
+                        <span class="text-base font-medium text-gray-300">Meta</span>
                         <div class="integration-status"></div>
                     </div>
                     <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="Google Ads & Analytics">
@@ -895,18 +888,25 @@
                         <span class="text-base font-medium text-gray-300">Google</span>
                         <div class="integration-status"></div>
                     </div>
-                    <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="Facebook & Instagram Ads">
-                        <div class="integration-icon-container bg-white/10">
-                            <i class="fab fa-facebook text-white"></i>
-                        </div>
-                        <span class="text-base font-medium text-gray-300">Meta</span>
-                        <div class="integration-status"></div>
-                    </div>
                     <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="Shopify E-commerce">
                         <div class="integration-icon-container bg-white/10">
-                            <i class="fas fa-store text-white"></i>
+                            <i class="fab fa-shopify text-white"></i>
                         </div>
                         <span class="text-base font-medium text-gray-300">Shopify</span>
+                        <div class="integration-status"></div>
+                    </div>
+                    <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="WooCommerce Integration">
+                        <div class="integration-icon-container bg-white/10">
+                            <i class="fab fa-wordpress text-white"></i>
+                        </div>
+                        <span class="text-base font-medium text-gray-300">WooCommerce</span>
+                        <div class="integration-status"></div>
+                    </div>
+                    <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="Reddit Ads Integration">
+                        <div class="integration-icon-container bg-white/10">
+                            <i class="fab fa-reddit text-white"></i>
+                        </div>
+                        <span class="text-base font-medium text-gray-300">Reddit</span>
                         <div class="integration-status"></div>
                     </div>
                     <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="Slack Notifications">
