--- a/index.html
+++ b/index.html
@@ -920,11 +920,11 @@
                         <span class="text-base font-medium text-gray-300">Tableau</span>
                         <div class="integration-status"></div>
                     </div>
-                    <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="Google Analytics">
+                    <div class="panel-card p-6 rounded-xl integration-card hover:shadow-lg min-w-[180px] flex flex-col items-center justify-center h-[180px] glow" data-tooltip="X (Twitter) Integration">
                         <div class="integration-icon-container bg-white/10">
-                            <i class="fas fa-analytics text-white text-2xl"></i>
+                            <i class="fab fa-x-twitter text-white text-2xl"></i>
                         </div>
-                        <span class="text-base font-medium text-gray-300">Analytics</span>
+                        <span class="text-base font-medium text-gray-300">X (Twitter)</span>
                         <div class="integration-status"></div>
                     </div>
                 </div>
@@ -1230,4 +1230,5 @@
         });
     </script>
 </body>
+</html>
 </html>
