--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                 Unified Marketing <span class="gradient-text">Intelligence Platform</span>
             </h1>
             <p class="text-lg md:text-xl mb-10 text-gray-300 max-w-3xl mx-auto animate-fade-in">
-                Connect all your marketing channels, track real-time performance, and get AI-powered insights in one unified dashboard.
+                Connect all your marketing channels, track real-time performance, and get AI-powered insights and automations all in one place.
             </p>
             <div class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-4 justify-center animate-fade-in">
                 <button class="bg-white hover:bg-gray-200 text-qunex-dark px-8 py-3 rounded-lg font-medium hover-lift shadow-md btn-hover-effect ripple-effect">
