--- a/index.html
+++ b/index.html
@@ -587,10 +587,10 @@
         <section id="platform" class="hero-bg py-16 md:py-20">
             <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center relative z-10">
                 <h1 class="hero-title text-4xl md:text-5xl lg:text-7xl font-bold mb-6 md:mb-8 text-gray-900 leading-tight animate-in">
-                    Unified Marketing Intelligence Platform
+                    The Most Intelligent Partner for Your Growing Team
                 </h1>
                 <p class="text-lg md:text-xl lg:text-2xl text-gray-600 mb-6 md:mb-8 max-w-3xl mx-auto leading-relaxed animate-in" style="transition-delay: 0.1s">
-                    Connect all your marketing channels, track real-time performance, and get AI-powered insights in one unified dashboard.
+                    All your channels. Real-time analytics. Clear next steps. One intelligent partner to accelerate your marketing success.
                 </p>
                 
                 <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 justify-center mb-6 md:mb-8">
@@ -1404,4 +1404,5 @@
         });
     </script>
 </body>
+
 </html>
