--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         }
         .hero-gradient {
             background: radial-gradient(ellipse at top right, rgba(34, 197, 94, 0.08), transparent 60%),
-                        radial-gradient(ellipse at bottom left, rgba(59, 130, 246, 0.05), transparent 60%);
+                        radial-gradient(ellipse at bottom left, rgba(59, 130, 246, 0.05), transparent 60%),
+                        linear-gradient(135deg, rgba(34, 197, 94, 0.05), rgba(59, 130, 246, 0.03));
             background-size: 400% 400%;
             animation: gradientShift 15s ease infinite;
         }
@@ -84,7 +85,7 @@
             transform: rotate(15deg) scale(1.1);
         }
         .btn-primary {
-            background: linear-gradient(135deg, #39FF14, #2ECC40);
+            background: linear-gradient(135deg, #39FF14, #20E070);
             color: white;
             padding: 14px 32px;
             border-radius: 50px;
@@ -102,9 +103,9 @@
             cursor: pointer;
         }
         .btn-primary:hover {
-            background: linear-gradient(135deg, #2ECC40, #228B22);
+            background: linear-gradient(135deg, #2ECC40, #1DB954);
             transform: translateY(-2px);
-            box-shadow: 0 10px 25px rgba(57, 255, 20, 0.15);
+            box-shadow: 0 10px 25px rgba(57, 255, 20, 0.2);
         }
         .btn-secondary {
             background: #1a4a3a;
@@ -164,7 +165,7 @@
         }
         .section-card:hover {
             transform: translateY(-8px) scale(1.02);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+            box-shadow: 0 20px 40px rgba(57, 255, 20, 0.08);
             border-color: #cbd5e1;
         }
         .hero-bg {
@@ -460,22 +461,26 @@
         <i class="fas fa-arrow-up"></i>
     </button>
     <main>
-        <!-- Hero Section -->
-        <section id="platform" class="hero-bg py-16 md:py-20 hero-gradient">
-            <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center relative z-10">
-                <h1 class="hero-title text-3xl md:text-5xl lg:text-7xl font-bold mb-6 md:mb-8 text-gray-900 leading-tight animate-in">
-                    Intelligent Partner for Your Growing Team
-                </h1>
-                <p class="text-lg md:text-xl lg:text-1xl text-gray-600 mb-6 md:mb-8 max-w-3xl mx-auto leading-relaxed animate-in" style="transition-delay: 0.1s">
-                    All your channels. Real-time analytics. Clear next steps. One intelligent partner to accelerate your marketing success.
-                </p>
-                <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 justify-center mb-6 md:mb-8">
-                    <a href="#" class="btn-primary text-base md:text-lg px-6 md:px-8 py-3 md:py-4 animate-in" style="transition-delay: 0.2s">Start Free Trial</a>
-                    <a href="#" class="btn-secondary text-base md:text-lg px-6 md:px-8 py-3 md:py-4 animate-in" style="transition-delay: 0.3s">Book Demo</a>
-                </div>
-                <p class="text-xs md:text-sm text-gray-500 animate-in" style="transition-delay: 0.4s">14-day free trial • No credit card required • Enterprise support included</p>
-            </div>
-        </section>
+<!-- Hero Section -->
+<section id="platform" class="hero-bg py-16 md:py-20 hero-gradient">
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center relative z-10">
+        <div class="inline-block px-4 py-2 mb-4 rounded-full bg-green-50 text-green-700 text-sm md:text-base font-medium animate-in">
+            ✨ Now with AI-powered insights
+        </div>
+        <h1 class="hero-title text-3xl md:text-5xl lg:text-7xl font-bold mb-6 md:mb-8 text-gray-900 leading-tight animate-in">
+            Your Intelligent Marketing Co-Pilot
+        </h1>
+        <p class="text-lg md:text-xl lg:text-1xl text-gray-600 mb-6 md:mb-8 max-w-3xl mx-auto leading-relaxed animate-in" style="transition-delay: 0.1s">
+            Unify data from all your channels, uncover hidden opportunities, and automate optimizations with AI-driven insights.
+        </p>
+        <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 justify-center mb-6 md:mb-8">
+            <a href="#" class="btn-primary text-base md:text-lg px-6 md:px-8 py-3 md:py-4 animate-in" style="transition-delay: 0.2s">Start Free Trial</a>
+            <a href="#" class="btn-secondary text-base md:text-lg px-6 md:px-8 py-3 md:py-4 animate-in" style="transition-delay: 0.3s">Book Demo</a>
+        </div>
+        <p class="text-xs md:text-sm text-gray-500 animate-in" style="transition-delay: 0.4s">14-day free trial • No credit card required • Enterprise support included</p>
+    </div>
+</section>
+
         <!-- Platform Integration Preview -->
         <section class="py-12 md:py-16 bg-white">
             <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -640,6 +645,21 @@
                 </div>
             </div>
         </section>
+        <!-- Pricing Section -->
+        <section id="pricing" class="py-16 md:py-20 bg-white">
+            <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 md:mb-6 animate-in">Simple, Transparent Pricing</h2>
+                <p class="text-lg md:text-xl text-gray-600 mb-6 md:mb-8 animate-in" style="transition-delay: 0.1s">
+                    Start optimizing your marketing with a plan that fits your needs.
+                </p>
+                <div class="bg-white border border-gray-200 rounded-xl p-6 md:p-8 shadow-sm animate-in" style="transition-delay: 0.2s">
+                    <p class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">899 AED</p>
+                    <p class="text-lg md:text-xl text-gray-600 mb-4">per month</p>
+                    <a href="#" class="btn-primary inline-block">Contact Sales</a>
+                    <p class="text-sm text-gray-500 mt-4">14-day free trial • No credit card required</p>
+                </div>
+            </div>
+        </section>
         <!-- Analytics Showcase -->
         <section class="py-16 md:py-20 bg-gray-50">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -676,12 +696,6 @@
                                 </div>
                                 <span class="text-gray-700">Custom KPI tracking</span>
                             </div>
-                        </div>
-                        <!-- Pricing Section -->
-                        <div class="mt-8 md:mt-12">
-                            <p class="text-lg md:text-xl font-semibold text-gray-900 mb-2">Simple, transparent pricing</p>
-                            <p class="text-lg md:text-xl text-gray-600 mb-4">Starting from <strong>899 AED</strong></p>
-                            <a href="#" class="btn-primary inline-block">Contact Sales</a>
                         </div>
                     </div>
                     <div class="section-card animate-in" style="transition-delay: 0.1s">
