--- a/index.html
+++ b/index.html
@@ -645,21 +645,22 @@
                 </div>
             </div>
         </section>
-        <!-- Pricing Section -->
-        <section id="pricing" class="py-16 md:py-20 bg-white">
-            <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-                <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 md:mb-6 animate-in">Simple, Transparent Pricing</h2>
-                <p class="text-lg md:text-xl text-gray-600 mb-6 md:mb-8 animate-in" style="transition-delay: 0.1s">
-                    Start optimizing your marketing with a plan that fits your needs.
-                </p>
-                <div class="bg-white border border-gray-200 rounded-xl p-6 md:p-8 shadow-sm animate-in" style="transition-delay: 0.2s">
-                    <p class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">899 AED</p>
-                    <p class="text-lg md:text-xl text-gray-600 mb-4">per month</p>
-                    <a href="#" class="btn-primary inline-block">Contact Sales</a>
-                    <p class="text-sm text-gray-500 mt-4">14-day free trial • No credit card required</p>
-                </div>
-            </div>
-        </section>
+<!-- Pricing Section -->
+<section id="pricing" class="py-16 md:py-20 bg-white">
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+        <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 md:mb-6 animate-in">Simple, Transparent Pricing</h2>
+        <p class="text-lg md:text-xl text-gray-600 mb-6 md:mb-8 animate-in" style="transition-delay: 0.1s">
+            Start optimizing your marketing with a plan that fits your needs.
+        </p>
+        <div class="bg-white border border-gray-200 rounded-xl p-6 md:p-8 shadow-sm animate-in" style="transition-delay: 0.2s">
+            <p class="text-sm text-gray-500 mb-1">Starting from</p>
+            <p class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">899 AED</p>
+            <p class="text-lg md:text-xl text-gray-600 mb-4">per month</p>
+            <a href="#" class="btn-primary inline-block">Contact Sales</a>
+            <p class="text-sm text-gray-500 mt-4">14-day free trial • No credit card required</p>
+        </div>
+    </div>
+</section>
         <!-- Analytics Showcase -->
         <section class="py-16 md:py-20 bg-gray-50">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
