--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <span class="h-3 w-3 rounded-full bg-neon group-hover:animate-ping absolute opacity-75"></span>
           <span class="h-3 w-3 rounded-full bg-neon relative z-10"></span>
         </div>
-        <span class="text-xl font-extrabold tracking-tight bg-gradient-to-r from-neon to-ink bg-clip-text text-transparent">qunex</span>
+        <span class="text-3xl font-extrabold tracking-tight bg-gradient-to-r from-neon to-ink bg-clip-text text-transparent">qunex</span>
       </a>
       <nav class="hidden md:flex items-center gap-7 text-sm text-black/70">
         <a class="hover:text-black transition-colors" href="#services">Services</a>
@@ -115,7 +115,7 @@
           AI-first marketing agency
         </div>
         <h1 class="mt-4 text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight tracking-tight">
-          Drive Revenue, <span class="text-neon">Not Just Traffic</span>
+          Drive Revenue, <span class="text-neonHover">Not Just Traffic</span>
         </h1>
         <div class="mt-3 inline-block">
           <span class="text-sm font-semibold text-black/60 tracking-wide uppercase">Your Partner for the AI Era</span>
@@ -249,7 +249,7 @@
      <h2 class="mt-4 text-3xl font-extrabold text-ink">
   Intelligence Powered by 
   <a href="https://qunex.tech" target="_blank" rel="noopener"
-     class="text-neon underline decoration-neon decoration-2 underline-offset-4 hover:text-neonHover transition-colors">
+     class="text-neonHover underline decoration-neon decoration-2 underline-offset-4 hover:text-neon transition-colors">
     Qunex+
   </a>
 </h2>
@@ -550,7 +550,7 @@
               <span class="h-3 w-3 rounded-full bg-neon group-hover:animate-ping absolute opacity-75"></span>
               <span class="h-3 w-3 rounded-full bg-neon relative z-10"></span>
             </div>
-            <span class="text-xl font-extrabold tracking-tight bg-gradient-to-r from-neon to-ink bg-clip-text text-transparent">qunex</span>
+            <span class="text-2xl font-extrabold tracking-tight bg-gradient-to-r from-neon to-ink bg-clip-text text-transparent">qunex</span>
           </a>
         </div>
         <p class="mt-4 text-xs text-black/50">© 2025 qunex. All rights reserved. <a href="#" class="text-black/70 hover:text-black">Privacy Policy</a> | <a href="#" class="text-black/70 hover:text-black">Terms of Service</a></p>
