--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     </div>
   </section>
 
-<!-- QUNEX+ (Neon-polished) -->
+<!-- QUNEX+ (Neon-polished.) -->
 <section id="qunex-plus" class="border-b border-black/5 bg-gray-50/70 py-20" aria-label="Qunex Plus">
   <div class="container mx-auto px-5">
     <div class="flex flex-col lg:flex-row items-center gap-12">
@@ -824,4 +824,5 @@
     });
   </script>
 </body>
+
 </html>
