--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>qunex — Drive Revenue, Not Just Traffic</title>
-  <meta name="description" content="qunex is an AI-first marketing agency We plan, create, and scale growth across channels with a minimal, measurable approach." />
+  <meta name="description" content="qunex is an AI-first marketing agency. We plan, create, and scale growth across channels with a minimal, measurable approach." />
   <link rel="icon" href="/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -826,4 +826,5 @@
 </body>
 
 </html>
+
 
