--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <span class="h-2 w-2 rounded-full bg-neon pulse-dot"></span><span>Minimal. Measurable. AI-first.</span>
         </span>
         <h1 class="mt-6 text-4xl md:text-6xl font-black leading-[1.05] tracking-tight hero-title">
-          Your <span class="underline-neon">Partner for the AI Era</span>
+          Your <span class="underline-neon">Partner for the AI Era.</span>
         </h1>
         <p class="mt-5 text-lg text-black/70 max-w-2xl">
           We design quiet, high-leverage systems—analytics, automations, and AI agents—that turn data into outcomes and scale with your team.
