--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       font-family: 'JetBrains Mono', 'SF Mono', monospace; 
     }
 
-    /* Main gradient backgrounds */
+    /* Main gradient backgrounds - Toned down */
     .gradient-hero {
-      background: radial-gradient(ellipse at top left, var(--q-green-start) 0%, var(--q-green-mid) 30%, var(--q-dark-start) 70%, var(--q-dark-end) 100%);
+      background: linear-gradient(135deg, #1f2937 0%, #111827 50%, #0f172a 100%);
       min-height: 100vh;
       position: relative;
       padding: 160px 0 80px 0;
@@ -56,7 +56,7 @@
     }
 
     .gradient-section {
-      background: linear-gradient(135deg, var(--q-green-start) 0%, var(--q-green-mid) 50%, var(--q-dark-start) 100%);
+      background: linear-gradient(135deg, #374151 0%, #1f2937 50%, #111827 100%);
     }
 
     .gradient-dark {
