--- a/index.html
+++ b/index.html
@@ -1407,7 +1407,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a href="#" style="color: #9ca3af; text-decoration: none; font-size: 14px; transition: color 0.2s;">Documentation</a>
             </li>
             <li style="margin-bottom: 10px;">
-              <a href="#" style="color: #9ca3af; text-decoration: none; font-size: 14px; transition: color 0.2s;">Help Center</a>
+              <a href="index1.html" style="color: #9ca3af; text-decoration: none; font-size: 14px; transition: color 0.2s;">Help Center</a>
             </li>
             <li style="margin-bottom: 10px;">
               <a href="#contact" style="color: #9ca3af; text-decoration: none; font-size: 14px; transition: color 0.2s;">Contact</a>
