--- a/platform.html
+++ b/platform.html
@@ -15,6 +15,7 @@
     <meta name="twitter:title" content="QUNEX+ — Unified Marketing Intelligence Platform">
     <meta name="twitter:description" content="Unify data from all your channels, uncover hidden opportunities, and automate optimizations with AI-driven insights.">
     <meta name="twitter:image" content="https://qunex.tech/og-image.jpg">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
