--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>qunex — Drive Revenue, Not Just Traffic | AI-First Marketing Agency</title>
-  <meta name="description" content="AI-first marketing agency in Dubai helping brands drive qualified leads and revenue with data-driven strategy, full-funnel execution, and our qunex+ platform." />
+  <title>Qunex — Drive Revenue, Not Just Traffic | AI-First Marketing Agency</title>
+  <meta name="description" content="AI-first marketing agency in Dubai driving qualified leads and revenue with data-driven strategy, full-funnel execution, and the qunex+ platform." />
   
   <!-- Open Graph -->
   <meta property="og:title" content="qunex — AI-first marketing that drives revenue" />
