--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
         
         <div class="flex gap-8" style="align-items: center;">
           <a href="#services" class="nav-link">Services</a>
-          <a href="platform.html" class="nav-link">Qunex+</a>
+          <a href="/platform" class="nav-link">Qunex+</a>
           <a href="#approach" class="nav-link">Approach</a>
           <a href="#faq" class="nav-link">FAQ</a>
         </div>
@@ -978,7 +978,7 @@
   <!-- Mobile Menu -->
   <div class="mobile-menu" id="mobileMenu" role="dialog" aria-modal="true" aria-label="Mobile menu">
     <a href="#services" class="nav-link">Services</a>
-    <a href="platform.html" class="nav-link">Qunex+</a>
+    <a href="/platform" class="nav-link">Qunex+</a>
     <a href="#approach" class="nav-link">Approach</a>
     <a href="#faq" class="nav-link">FAQ</a>
     <button class="btn btn-glass" style="margin-top: 20px;" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">
@@ -1011,7 +1011,7 @@
           <button class="btn btn-secondary" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">
             Get Your Free Proposal
           </button>
-          <button class="btn btn-primary" onclick="window.open('platform.html', '_blank')">
+          <button class="btn btn-primary" onclick="window.open('/platform', '_blank')">
             Discover qunex+
             <i class="fas fa-arrow-right" style="margin-left: 8px; font-size: 12px;"></i>
           </button>
@@ -1165,7 +1165,7 @@
           </div>
 
           <div class="contact-buttons">
-            <button class="btn btn-secondary" onclick="window.open('platform.html', '_blank')">
+            <button class="btn btn-secondary" onclick="window.open('/platform', '_blank')">
               Explore qunex+ Platform
             </button>
             <button class="btn btn-primary" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">
