--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
       }
 
       .gradient-hero {
-        padding: 92px 0 56px 0;
+        padding: 112px 0 56px 0;
       }
 
       .stats-container {
@@ -936,6 +936,54 @@
       "target": "https://www.google.com/search?q=site:qunex.tech+{search_term_string}",
       "query-input": "required name=search_term_string"
     }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Can we start without long contracts?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes— we begin with a standard 3-month kickoff period with clearly defined KPIs. We only extend our partnership if we are delivering measurable results and you are seeing value."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do we get access to the qunex+ platform?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, qunex+ access is included for all active clients. You will get your own login to view real-time performance dashboards, insights, and recommendations."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How is qunex+ different from other marketing tools?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "qunex+ forecasts performance and provides actionable recommendations, not just reports. It is built by performance marketers for performance teams."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is your typical client engagement model?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We operate as an extension of your team with weekly syncs, shared Slack, and monthly strategy reviews. You will speak directly with strategists."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Where are you based and what time zones do you support?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We are Dubai-based with global coverage across EST, GMT, and GST time zones."
+        }
+      }
+    ]
   }
   </script>
 </head>
